@@ -24,6 +24,14 @@
     </text>
   </lang>
   <autodetect>
+    <parallel>
+      <commandset>PJL,MLC,PCL,PCLXL,POSTSCRIPT</commandset>
+      <manufacturer>Hewlett-Packard</manufacturer>
+      <model>HP LaserJet 1200</model>
+    </parallel>
+    <snmp>
+      <description>HP LaserJet 1200</description>
+    </snmp>
   </autodetect>
   <functionality>A</functionality>
   <driver>pxlmono</driver>
