@@ -25,7 +25,16 @@
     </text>
   </lang>
   <autodetect>
-  <!--no known parport probe information--></autodetect>
+    <parallel>
+      <commandset>PJL,MLC,PCL,PCLXL,POSTSCRIPT</commandset>
+      <description>Hewlett-Packard LaserJet 4000 Series</description>
+      <manufacturer>Hewlett-Packard</manufacturer>
+      <model>HP LaserJet 4000 Series</model>
+    </parallel>
+    <snmp>
+      <description>HP LaserJet 4000 Series</description>
+    </snmp>
+  </autodetect>
   <functionality>A</functionality>
   <driver>Postscript</driver>
   <!--no "contrib_url"-->
