@@ -33,6 +33,9 @@
       <manufacturer>Hewlett-Packard</manufacturer>
       <model>HP LaserJet 4050 Series</model>
     </parallel>
+    <snmp>
+      <description>HP LaserJet 4050 Series</description>
+    </snmp>
   </autodetect>
   <functionality>A</functionality>
   <driver>Postscript</driver><!--verified--><!--affiliate keys; modify and face my wrath!-->
