@@ -24,7 +24,12 @@
     </text>
   </lang>
   <autodetect>
-  <!--no known parport probe information--></autodetect>
+    <parallel>
+      <commandset>PJL,PCL,POSTSCRIPT</commandset>
+      <manufacturer>Hewlett-Packard</manufacturer>
+      <model>HP LaserJet 4 Plus</model>
+    </parallel>
+  </autodetect>
   <functionality>A</functionality>
 
   <driver>hpijs</driver><!--verified--><!--no "contrib_url"--><!--no comments!--></printer>
