@@ -1,3 +1,9 @@
+2003-12-16  Tim Waugh <twaugh@redhat.com>
+ 
+	* printer/HP-LaserJet_1200.xml, printer/HP-LaserJet_4000.xml,
+	  printer/HP-LaserJet_4050.xml, printer/HP-LaserJet_4_Plus.xml: Added
+          autodetection information.
+
 2003-12-15  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* printer/HP-Color_LaserJet_3500.xml: Corrected rating to
